test/tests/stages/18_structures/invalid_types/extra_credit/bad_union_member_access/nested_non_member.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: u
        Bool: 1
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: nested
            Structure: 
              TIdentifier: s
              Bool: 0
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: my_union
                  CCompoundInit: 
                    List[1]: 
                      CCompoundInit: 
                        List[1]: 
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                            None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: u
                    Bool: 1
                  None: 
            CS: 
              CReturn: 
                CDot: 
                  TIdentifier: a
                  CVar: 
                    TIdentifier: my_union
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
